welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:15: error: ')' expected but ';' found.
  	if(getY() < getMondeHauteur()-1){setY(getY()+1;i += 1)}
                                                      ^ColumnByColumn:15: error: ';' expected but ')' found.
  	if(getY() < getMondeHauteur()-1){setY(getY()+1;i += 1)}
                                                             ^